--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #89b218;
+  --primary-color: #dca11d;
   --text-color: #fff;
   --background-color: #000;
   --font-family: Manrope, sans-serif;
@@ -52,7 +52,7 @@ body {
 }
 
 .header-active {
-  background-color: #122623;
+  background-color: #02263a;
 }
 .logo a {
   font-size: 1.5rem;
@@ -132,7 +132,7 @@ body {
 }
 
 .logo-image {
-  width: 120px;
+  width: 100px;
   height: auto;
   /* border-radius: 50%; */
   object-fit: cover;
@@ -263,14 +263,14 @@ body {
   font-weight: 500;
   margin-bottom: 20px;
   line-height: 1.3;
-  color: #222f2d;
+  color: #044163;
 }
 
 .intro-heading .intro-highlight {
   font-family: "Roboto Serif";
   font-style: italic;
   font-weight: 500;
-  color: #222f2d; /* highlight color set in :root */
+  color: #044163; /* highlight color set in :root */
 }
 
 .intro-subtext {
@@ -501,7 +501,7 @@ body {
 }
 
 .cta-section {
-  background-color: #0f2f25; /* Dark green shade */
+  background-color: #02263a; /* Dark green shade */
   color: #fff;
   text-align: center;
   padding: 80px 0;
@@ -873,7 +873,7 @@ body {
 
 .tag[data-selected="true"] {
   background: #1c1c1c;
-  color: #91cc08;
+  color: #dca11d;
   border-color: #1c1c1c;
 }
 
@@ -894,7 +894,7 @@ body {
 }
 
 .form-submit-btn:hover {
-  background: #a4d653; /* slightly lighter variation if desired */
+  background: #dca11d; /* slightly lighter variation if desired */
 }
 
 .contact-image-area {
@@ -925,7 +925,7 @@ body {
 }
 
 .footer-section {
-  background-color: #0f2f25; /* Dark green background */
+  background-color: #02263a; /* Dark green background */
   color: #fff;
   padding: 40px 0;
   position: relative;
@@ -1045,7 +1045,7 @@ body {
 }
 
 .scroll-top-btn:hover {
-  background: #a4d653; /* Slight lighter variant for hover */
+  background: #dca11d; /* Slight lighter variant for hover */
 }
 
 /* Responsive Styles */
